syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Token Services Protobuf
 * ​
 * Copyright (C) 2018 - 2023 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */
option java_package = "com.hederahashgraph.api.proto.java";
// <<<pbj.java_package = "com.hedera.hapi.node.state.token">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

/**
 * A singleton state object that accumulates node fees for distribution<br/>
 * This is used to record the total amount of fees due to each node for distribution in current staking period
 */
message NodePayments {
  /**
   * A map of node account number to the total amount of fees due to each node
   */
  map<uint64, NodePayment> payments = 1;
}

/**
 * A record of the total amount of fees due to a node
 */
message NodePayment {
  /**
   * The node account number
   */
  uint64 account_number = 1;
  /**
   * The total amount of fees due to the node in tinybars
   */
  uint64 fees = 2;
}